modal flicker fix

--- a/client/components/mail-merge/mail-merge.css
+++ b/client/components/mail-merge/mail-merge.css
@@ -46,3 +46,4 @@
     height:750px;
 }
 
+body.modal-open { overflow:inherit; padding-right:inherit !important; }
